# deepagents_skills

./: README.md  example.py  pyproject.toml
.cursor/plans/: 实现_skills_渐进式加载功能_74c6de43.plan.md
deepagents_skills/: __init__.py  config.json  config.py  test.py
deepagents_skills/agent/: __init__.py  core.py  prompt.py  tools.py
deepagents_skills/examples/skills/code-review/: SKILL.md
deepagents_skills/examples/skills/summarize/: SKILL.md
deepagents_skills/examples/skills/web-research/: SKILL.md
deepagents_skills/memory/: __init__.py  middleware.py  store.py
deepagents_skills/skills/: __init__.py  chain.py  discovery.py  executor.py  loader.py  model.py  registry.py
skills/summarize/: SKILL.md
skills/web-research/: SKILL.md
src/deepagents_skills/: __init__.py  ai_integration.py  parser.py
tests/: test_ai_integration.py  test_parser.py
