[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepagents-skills"
version = "0.1.0"
description = "智能体技能和记忆系统 - 让智能体能够动态发现、加载和执行特定任务的专业指令集"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "DeepAgents Team" }
]
keywords = [
    "ai",
    "agents",
    "skills",
    "memory",
    "langchain",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/deepagents/deepagents-skills"
Documentation = "https://github.com/deepagents/deepagents-skills#readme"
Repository = "https://github.com/deepagents/deepagents-skills"

[tool.hatch.build.targets.wheel]
packages = ["deepagents_skills"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["deepagents_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

